dark mode fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,15 +40,15 @@ a {
   box-sizing: border-box;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
   body {
     color: white;
-    background: rgb(136, 136, 136);
+    background: rgb(233, 233, 233);
   }
-} */
+}
 
 @layer components {
   .job-article {
